// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefinementList rendering with facets 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <div>
          Amazon
        </div>
      </li>
      <li
        class="item selectedItem"
      >
        <div>
          Google
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`RefinementList rendering with facets and disabled show more 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <div>
          Amazon
        </div>
      </li>
      <li
        class="item selectedItem"
      >
        <div>
          Google
        </div>
      </li>
    </ul>
    <button
      class="showMore disabledShowMore"
      disabled=""
    >
      <button
        data-testid="show-more"
      >
        Show more
      </button>
    </button>
  </div>
</div>
`;

exports[`RefinementList rendering with facets and show more 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <div>
          Amazon
        </div>
      </li>
      <li
        class="item selectedItem"
      >
        <div>
          Google
        </div>
      </li>
    </ul>
    <button
      class="showMore"
    >
      {"isShowingMore":false}
    </button>
  </div>
</div>
`;

exports[`RefinementList rendering with facets from search 1`] = `
<div>
  <div
    class="root"
  >
    <div
      class="searchBox"
    >
      <div>
        <form
          action=""
          novalidate=""
          role="search"
        >
          <input
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            maxlength="512"
            placeholder="Search"
            type="search"
          />
          <button
            title="Submit the search query."
            type="submit"
          >
            submit
          </button>
          <button
            hidden=""
            title="Clear the search query."
            type="reset"
          >
            reset
          </button>
          <span
            hidden=""
          >
            loadingIndicator
          </span>
        </form>
      </div>
    </div>
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <div>
          Amazon
        </div>
      </li>
      <li
        class="item selectedItem"
      >
        <div>
          Google
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`RefinementList rendering without facets 1`] = `
<div>
  <div
    class="root noRefinementRoot"
  />
</div>
`;

exports[`RefinementList rendering without facets from search 1`] = `
<div>
  <div
    class="root noRefinementRoot"
  >
    <div
      class="searchBox"
    >
      <div>
        <form
          action=""
          novalidate=""
          role="search"
        >
          <input
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            maxlength="512"
            placeholder="Search"
            type="search"
          />
          <button
            title="Submit the search query."
            type="submit"
          >
            submit
          </button>
          <button
            hidden=""
            title="Clear the search query."
            type="reset"
          >
            reset
          </button>
          <span
            hidden=""
          >
            loadingIndicator
          </span>
        </form>
      </div>
    </div>
    <div
      class="noResults"
    >
      {}
    </div>
  </div>
</div>
`;
